fixed stocks gap?

--- a/src/routes/Stocks.css
+++ b/src/routes/Stocks.css
@@ -269,6 +269,7 @@
 }
 
 .stocks-page .stock-info {
+    padding-left: 1em;
     display: flex;
     flex-direction: column;
 }
@@ -296,6 +297,7 @@
 }
 
 .stocks-page .stock-price {
+    padding-right: 1em;
     font-weight: bold;
 }
 
